// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hmr src/file.css snowpack 1`] = `
Array [
  Object {
    "bubbled": false,
    "type": "update",
    "url": "/_dist_/file.css",
  },
  Object {
    "bubbled": false,
    "type": "update",
    "url": "/_dist_/file.css.proxy.js",
  },
]
`;

exports[`hmr src/file.css vite 1`] = `
Array [
  Object {
    "changeSrcPath": "/src/file.css",
    "path": "/src/file.css",
    "type": "style-update",
  },
]
`;

exports[`hmr src/file.json snowpack 1`] = `
Array [
  Object {
    "bubbled": true,
    "type": "update",
    "url": "/_dist_/bridge.js",
  },
]
`;

exports[`hmr src/file.json vite 1`] = `
Array [
  Object {
    "changeSrcPath": "/src/file.json",
    "path": "/src/bridge.jsx",
    "type": "js-update",
  },
]
`;

exports[`hmr src/file.jsx snowpack 1`] = `
Array [
  Object {
    "bubbled": false,
    "type": "update",
    "url": "/_dist_/file.js",
  },
]
`;

exports[`hmr src/file.jsx vite 1`] = `
Array [
  Object {
    "changeSrcPath": "/src/file.jsx",
    "path": "/src/file.jsx",
    "type": "js-update",
  },
]
`;

exports[`hmr src/file.module.css snowpack 1`] = `
Array [
  Object {
    "bubbled": true,
    "type": "update",
    "url": "/_dist_/bridge.js",
  },
]
`;

exports[`hmr src/file.module.css vite 1`] = `
Array [
  Object {
    "changeSrcPath": "/src/file.module.css",
    "path": "/src/bridge.jsx",
    "type": "js-update",
  },
  Object {
    "changeSrcPath": "/src/file.module.css",
    "path": "/src/file.module.css",
    "type": "style-update",
  },
]
`;

exports[`hmr src/file2.js snowpack 1`] = `
Array [
  Object {
    "bubbled": true,
    "type": "update",
    "url": "/_dist_/file.js",
  },
]
`;

exports[`hmr src/file2.js vite 1`] = `
Array [
  Object {
    "changeSrcPath": "/src/file2.js",
    "path": "/src/file.jsx",
    "type": "js-update",
  },
]
`;

exports[`hmr src/imported-many-times.js snowpack 1`] = `
Array [
  Object {
    "bubbled": true,
    "type": "update",
    "url": "/_dist_/main.js",
  },
  Object {
    "bubbled": true,
    "type": "update",
    "url": "/_dist_/file.js",
  },
]
`;

exports[`hmr src/imported-many-times.js vite 1`] = `
Array [
  Object {
    "changeSrcPath": "/src/imported-many-times.js",
    "path": "/src/main.jsx",
    "type": "js-update",
  },
  Object {
    "changeSrcPath": "/src/imported-many-times.js",
    "path": "/src/file.jsx",
    "type": "js-update",
  },
]
`;

exports[`hmr src/main.jsx snowpack 1`] = `
Array [
  Object {
    "bubbled": false,
    "type": "update",
    "url": "/_dist_/main.js",
  },
]
`;

exports[`hmr src/main.jsx vite 1`] = `
Array [
  Object {
    "changeSrcPath": "/src/main.jsx",
    "path": "/src/main.jsx",
    "type": "js-update",
  },
]
`;
